2004-12-25  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am: New file.
	* headers.m4: Likewise.
	* btree.c: Likewise.
	* btree.h: Likewise.
	* btree-test.c: Likewise.
